# MaterialX

./: CMakeLists.txt
.github/workflows/: build_wasm.yml
libraries/adsk/adsklib/: adsklib_defs.mtlx
libraries/pbrlib/genglsl/: mx_conductor_bsdf.glsl.bak
libraries/pbrlib/genglsl/lib/: mx_math.glsl  mx_math_common.glsl  mx_math_latlong.glsl
resources/Materials/TestSuite/adsklib/: adsk_token_node.mtlx
resources/Materials/TestSuite/stdlib/texture/: tokenGraph.mtlx
source/JsMaterialX/: CMakeLists.txt
source/JsMaterialX/JsMaterialXGenEssl/: JsEsslShaderGenerator.cpp  JsEsslShaderGenerator.js
source/JsMaterialX/JsMaterialXGenGLES/: JsGLESShaderGenerator.cpp  JsGlslShaderGenerator.cpp
source/JsMaterialX/JsMaterialXGenShader/: JsGenContext.cpp  JsGenOptions.cpp  JsShader.cpp  JsShaderGenerator.cpp  JsUtil.cpp
source/JsMaterialX/JsMaterialXView/: SurfaceMaterialEmissive.mtlx  index.html  nodegraph.mtlx  package-lock.json  package.json  shader-frag.glsl  shader-vert.glsl  webpack.config.js
source/JsMaterialX/JsMaterialXView/src/: helper.js  index.js
source/JsMaterialX/test/: XmlExport.spec.js  XmlIo.spec.js  basics.spec.js  codeExamples.spec.js  customBindings.spec.js  document.spec.js  glesShaderGenerator.spec.js  package.json  readXml.spec.js  testHelpers.js  traverseGraph.spec.js
source/JsMaterialX/test/browser/: browserGlesShaderGenerator.spec.js
source/MaterialXContrib/MaterialXMaya/: MaterialXNode.cpp
source/MaterialXCore/: Element.cpp  Element.h  Interface.cpp  Interface.h  Node.cpp
source/MaterialXGenEssl/: EsslShaderGenerator.cpp  EsslShaderGenerator.h  EsslSyntax.cpp  EsslSyntax.h
source/MaterialXGenEssl/libraries/pbrlib/essl/lib/: mx_math.glsl
source/MaterialXGenGLES/: CMakeLists.txt  GLESShaderGenerator.cpp  GLESShaderGenerator.h  GLESSyntax.cpp  GLESSyntax.h
source/MaterialXGenGLES/Nodes/: SurfaceNodeGLES.cpp  SurfaceNodeGLES.h
source/MaterialXGenGLES/libraries/pbrlib/gles/: pbrlib_gles_impl.mtlx
source/MaterialXGenGLES/libraries/pbrlib/gles/lib/: mx_math_latlong.glsl
source/MaterialXGenGLES/libraries/stdlib/gles/: stdlib_genglsl_gles_impl.mtlx
source/MaterialXGenGlsl/: GlslShaderGenerator.cpp  GlslShaderGenerator.h
source/MaterialXGenGlsl/Nodes/: NormalNodeGlsl.cpp  SurfaceNodeGlsl.cpp  SurfaceNodeGlsl.h  SurfaceNodeMaya.cpp
source/MaterialXGenOgsXml/: CMakeLists.txt  GlslFragmentGenerator.cpp  OgsFragment.cpp  OgsXmlGenerator.cpp  OgsXmlGenerator.h  README.md  SurfaceNodeMaya.cpp
source/MaterialXGenShader/: ShaderNode.cpp  ShaderStage.cpp  Util.cpp
source/MaterialXRuntime/Private/: PvtPort.cpp
source/MaterialXTest/: CMakeLists.txt
source/MaterialXTest/MaterialXFormat/: File.cpp
source/MaterialXTest/MaterialXRuntime/: Runtime.cpp
source/MaterialXView/: CMakeLists.txt  Viewer.cpp
source/PyMaterialX/PyMaterialXCore/: PyElement.cpp  PyInterface.cpp
